--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,4 @@
-{{title}}
+<app-nav-bar></app-nav-bar>
+<div class="container" style="margin-top: 55px;">
+    <router-outlet></router-outlet>
+</div>
