--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background: rgba(0, 0, 0, 0.3);
+    background-blend-mode: multiply;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+@media(max-width: 991px){
+    .sidebar{
+        background-color: rgb(71, 71, 71);
+    }
+}
