--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-spin-clockwise-fade" [fullScreen] = "true"></ngx-spinner>
 <app-nav-bar></app-nav-bar>
 <div class="container" style="margin-top: 55px;">
     <router-outlet></router-outlet>
