--- a/client/src/app/nav-bar/nav-bar.component.html
+++ b/client/src/app/nav-bar/nav-bar.component.html
@@ -12,13 +12,7 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
           <li class="nav-item mx-2">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" routerLink="/plans">Plans</a>
           </li>
         </ul>
         <div class="d-flex justify-content-center align-items-center">
