Addeed messages functionality with SingalR

--- a/client/src/app/Plans/plans-main/plans-main.component.html
+++ b/client/src/app/Plans/plans-main/plans-main.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5 d-flex justify-content-center">
-  <ul class="list-group col-3 mt-4">
+  <ul class="list-group col-3">
     <li  routerLink="/plans/list" class="btn list-group-item m-2 text-center">My plans</li>
     <li  routerLink="/plans/create" class="btn list-group-item m-2 text-center">Create plan</li>
     <li  routerLink="/plans/market" class="btn list-group-item m-2 text-center">Market</li>
