--- a/client/src/app/nav-bar/nav-bar.component.html
+++ b/client/src/app/nav-bar/nav-bar.component.html
@@ -17,6 +17,9 @@
           <li class="nav-item mx-2">
             <a class="nav-link" routerLink="/accounts/list">Users</a>
           </li>
+          <li class="nav-item mx-2">
+            <a class="nav-link" routerLink="/body">Body</a>
+          </li>
         </ul>
         <div class="d-flex justify-content-center align-items-center">
             <ng-container *ngIf="!(accountService.currentUser$ | async)">
