--- a/client/src/app/Plans/plans-market/plans-market.component.html
+++ b/client/src/app/Plans/plans-market/plans-market.component.html
@@ -13,9 +13,15 @@
       <tr>
         <td>{{plan.name}}</td>
         <td>{{plan.authorName}}</td>
-        <td *ngIf="plan.show"><button class="btn" (click)="plan.show = !plan.show"> &#9650;</button></td>
-        <td *ngIf="!plan.show"><button class="btn" (click)="plan.show = !plan.show"> &#9660;</button></td>
-        <td><button class="btn btn-success" (click)="addPlan(plan.planId)">+</button> </td>
+        <td *ngIf="plan.show">
+          <button class="btn" (click)="plan.show = !plan.show"> &#9650;</button>
+        </td>
+        <td *ngIf="!plan.show">
+          <button class="btn" (click)="plan.show = !plan.show"> &#9660;</button>
+        </td>
+        <td>
+          <button class="btn btn-success" (click)="addPlan(plan.planId)">+</button>
+        </td>
       </tr>
       <ng-container *ngIf="plan.show">
         <tr class="table-secondary" *ngFor="let exercise of plan.exercises">
@@ -28,4 +34,21 @@
     </ng-container>
     </tbody>
   </table>
+
+  <!-- Pagination Controls -->
+  <p class="text-center my-3 fs-5">Showing plans {{itemsFrom}} to {{itemsTo}} of {{totalCount}}</p>
+
+  <div class="d-flex justify-content-center align-items-center mt-3">
+    <button class="btn btn-secondary me-2" (click)="previousPage()" [disabled]="currentPage === 1">Previous</button>
+    <input
+      type="number"
+      class="form-control text-center me-2"
+      style="width: 80px;"
+      [(ngModel)]="currentPage"
+      (change)="goToPage(currentPage)"
+      min="1"
+      [max]="totalPages || 1"
+    />
+    <button class="btn btn-secondary" (click)="nextPage()" [disabled]="currentPage === totalPages">Next</button>
+  </div>
 </div>
