--- a/client/src/app/Accounts/register/register.component.html
+++ b/client/src/app/Accounts/register/register.component.html
@@ -1,20 +1,12 @@
-<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
-       <app-text-input [formControl]="$any(registerForm.controls['username'])" [label]="'Username'"></app-text-input>
-       <app-text-input [formControl]="$any(registerForm.controls['email'])" [label]="'Email'"></app-text-input>
-       <div class="mb-3">
-              <label style="margin-right:10px">Gender: </label>
-              <label class="form-check-label">
-                     <input type="radio" value="male" formControlName="gender">Male
-              </label>
-              <label class="form-check-label">
-                     <input type="radio" class="ms-2" value="female" formControlName="gender">Female
-              </label>
-       </div>
-       <app-text-input [formControl]="$any(registerForm.controls['dateOfBirth'])" [label]="'Date of birth'" [type]="'date'"></app-text-input>
-       <app-text-input [formControl]="$any(registerForm.controls['password'])" [label]="'Password'" [type]="'password'"></app-text-input>
-       <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])"  [label]="'Confirm password'" [type]="'password'"></app-text-input>
+<div class="text-center mb-2">
+  <button class="btn btn-secondary" (click)="setActiveForm('member')" [class.active]="activeForm === 'member'">Member</button>
+  <button class="btn btn-secondary" (click)="setActiveForm('trainer')" [class.active]="activeForm === 'trainer'">Trainer</button>
+</div>
 
-       <div class="form-group text-center">
-              <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
-            </div>
-     </form>
+<div *ngIf="activeForm === 'member'">
+  <app-register-member></app-register-member>
+</div>
+
+<div *ngIf="activeForm === 'trainer'">
+  <app-register-trainer></app-register-trainer>
+</div>
