--- a/client/src/app/Accounts/list/accounts-list.component.html
+++ b/client/src/app/Accounts/list/accounts-list.component.html
@@ -1,3 +1,9 @@
+<div class="text-center my-3">
+  <button class="btn btn-secondary" (click)="getList(this.currentPage, this.pageSize)">All</button>
+  <button class="btn btn-secondary" (click)="getList(this.currentPage, this.pageSize,'Member')">Members</button>
+  <button class="btn btn-secondary" (click)="getList(this.currentPage, this.pageSize,'Trainer')">Trainers</button>
+</div>
+
 <p class="text-center my-4 fs-5">Users from {{itemsFrom}} to {{itemsTo}} of {{totalCount}}</p>
 
 <div class="row justify-content-center align-items-center g-3">
