--- a/client/src/app/Accounts/user-card/user-card.component.html
+++ b/client/src/app/Accounts/user-card/user-card.component.html
@@ -1,4 +1,9 @@
 <div class="card mb-4" *ngIf="user">
+  <div class="card-body p-1">
+    <h6 class="card-title text-center mb-1">
+      {{user.role}}
+    </h6>
+  </div>
   <div class="card-img-wrapper">
     <img src="assets/images/userAwatar.jpg" alt="assets/images/userAwatar.jpg" class="card-img-top">
     <ul class="list-inline member-icons animate text-center">
