--- a/client/src/app/Plans/plans-main/plans-main.component.html
+++ b/client/src/app/Plans/plans-main/plans-main.component.html
@@ -1,7 +1,13 @@
 <div class="container mt-5 d-flex justify-content-center">
   <ul class="list-group col-3">
-    <li  routerLink="/plans/list" class="btn list-group-item m-2 text-center">My plans</li>
-    <li  routerLink="/plans/create" class="btn list-group-item m-2 text-center">Create plan</li>
-    <li  routerLink="/plans/market" class="btn list-group-item m-2 text-center">Market</li>
+    <ng-container *ngIf="(accountService.currentUser$ | async)?.role === 'Member'">
+      <li routerLink="/plans/market" class="btn list-group-item m-2 text-center">Market</li>
+      <li routerLink="/plans/list" class="btn list-group-item m-2 text-center">My plans</li>
+      <li routerLink="/plans/create" class="btn list-group-item m-2 text-center">Create plan</li>
+    </ng-container>
+    <ng-container *ngIf="(accountService.currentUser$ | async)?.role === 'Trainer'">
+      <li routerLink="/plans/create-template" class="btn list-group-item m-2 text-center">Create plan</li>
+      <li routerLink="/plans/your-templates" class="btn list-group-item m-2 text-center">Your Templates</li>
+    </ng-container>
   </ul>
 </div>
